# live-earth-wallpaper

./: Cargo.toml  README.md  shell.nix
.cargo/: config.toml
src/: config.rs  himawari.rs  main.rs  monitor.rs  moon_texture.rs  renderer.rs  satellite.rs  star_data.rs  tray.rs  wallpaper.rs
src/astronomy/: coordinates.rs  mod.rs  moon.rs  planets.rs  stars.rs
